[package]
name = "ro-topt"
version = "0.1.0"
edition = "2021"
description = "A TOTP generator application for RO"

[dependencies]
iced = { version = "0.9", features = ["tokio", "canvas"] }
totp-rs = "4.0"
base32 = "0.4"
chrono = "0.4"
qrcode = "0.12"
image = "0.23"
clipboard = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
